# git-phantom-scope

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  TODO.md  architecture_diagrams_plantuml.md  docker-compose.yml  gitprofileai_complete_spec.md  index.txt  openapi_spec.yaml
backend/: alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt
backend/api/: deps.py
backend/api/v1/: router.py
backend/app/: __init__.py  celery_worker.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  metrics.py
backend/db/: models.py  session.py
backend/gateway/: __init__.py  health.py  session.py
backend/services/: analytics_pipeline.py  asset_storage.py  byok_crypto.py  commit_analyzer.py  github_graphql.py  github_service.py  image_generator.py  model_connector.py  packager.py  pdf_report.py  prompt_orchestrator.py  prompt_tracker.py  scoring_engine.py  sso_service.py  stripe_service.py  team_analytics.py  whitelabel.py
backend/skills/: base.py  registry.py
backend/tests/: conftest.py  test_analytics_pipeline.py  test_api_analyze.py  test_asset_storage.py  test_byok_crypto.py  test_commit_analyzer.py  test_commit_analyzer_v2.py  test_enterprise_routes.py  test_generate_api.py  test_github_graphql.py  test_github_service.py  test_image_generator.py  test_model_connector.py  test_packager.py  test_pdf_report.py  test_prompt_orchestrator.py  test_prompt_tracker.py  test_scoring_engine.py  test_scoring_engine_v2.py  test_sso_service.py  test_stripe_service.py  test_team_analytics.py  test_whitelabel.py
frontend/: next.config.js  (+4 more)
(+44 files in other folders)
